# Data-Analysis-for-Hospitals

./: Makefile  README.md  pyproject.toml
data_analysis_for_hospitals/: __init__.py
data_analysis_for_hospitals/modeling/: predict.py
