[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_analysis_for_hospitals"
version = "0.0.1"
description = "This project is focused on performing exploratory data analysis on hospital-related datasets using Python and pandas. The goal is to practice real-world data handling skills, including cleaning, analysis, and visualization."
authors = [
  { name = "Mark Baltachi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["data_analysis_for_hospitals"]
include = ["pyproject.toml", "data_analysis_for_hospitals/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["data_analysis_for_hospitals"]
force-sort-within-sections = true

